maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:63: error: type mismatch;
 found   : Unit
 required: Int
  if (estSurBiscuit==true){return 4}
  ^